# util

./: .clang-format  .clangd  CMakeLists.txt  README.md  TODO.md  brew-cross.ini  meson.build  meson_options.txt
generator/: generator.cpp
include/: grace.hpp
include/grace/: CMakeLists.txt  compat.hpp  experimental.hpp  fn.hpp  iter.hpp  meta.hpp  ranges.hpp  toy.hpp  util.hpp
include/grace/compat/: bind_back.hpp  no_unique_address.hpp
include/grace/experimental/: algo.hpp  util.hpp
include/grace/fn/: bind.hpp  op.hpp  wrap.hpp
include/grace/fn/op/: CMakeLists.txt  casts.cppm  casts.hpp  construct.cppm  construct.hpp  copy.cppm  copy.hpp  cut_rvalue_ref.cppm  cut_rvalue_ref.hpp  decay_copy.cppm  decay_copy.hpp  for_each_in_parameter_pack.cppm  for_each_in_parameter_pack.hpp  free.cppm  free.hpp  get.cppm  get.hpp  get_reference.cppm  get_reference.hpp  indirect.cppm  indirect.hpp  lift.hpp  module.cppm  subscript.cppm  subscript.hpp  throw_exception.cppm  throw_exception.hpp  tuple_fold_invoke.cppm  tuple_fold_invoke.hpp  tuple_sequence_invoke.cppm  tuple_sequence_invoke.hpp
include/grace/iter/: get_lowest_base.hpp  ostream_joiner.hpp  reverse.hpp
include/grace/meta/: CMakeLists.txt  concepts.cppm  concepts.hpp  copy_cvref.cppm  copy_cvref.hpp  index_sequence_for_tuple.cppm  index_sequence_for_tuple.hpp  module.cppm  string_literal.cppm  string_literal.hpp  tag.cppm  tag.hpp  tuple.cppm  tuple.hpp  type_list.cppm  type_list.hpp
include/grace/ranges/: consign_view.hpp  get_lowest_base.hpp  pointer_view.hpp  subrange.hpp
include/grace/toy/: cvref_string_from_args.hpp  empty.hpp  print.hpp  print_cvref_string_from_this.hpp  printing_constructor.hpp
include/grace/util/: CMakeLists.txt  bitset.cppm  bitset.hpp  cctype.cppm  cctype.hpp  exception_storage.cppm  exception_storage.hpp  first_flag.cppm  first_flag.hpp  flag_set.cppm  flag_set.hpp  for_each_in_parameter_pack.cppm  for_each_in_parameter_pack.hpp  for_each_in_tuple.cppm  for_each_in_tuple.hpp  get_deleter.cppm  get_deleter.hpp  heap_storage.hpp  ignore.cppm  ignore.hpp  module.cppm  prepend_deleter.cppm  prepend_deleter.hpp  read_only_value.cppm  read_only_value.hpp  reverse_arguments.cppm  reverse_arguments.hpp  scoped.cppm  scoped.hpp  shared_from_this_base.cppm  shared_from_this_base.hpp  storage_base.cppm  storage_base.hpp  to_address.cppm  to_address.hpp  tuple_fold_invoke.cppm  tuple_fold_invoke.hpp  tuple_sequence_invoke.cppm  tuple_sequence_invoke.hpp  utility.cppm  (+1 more)
include/siga/: algo.hpp  experimental.hpp  fn.hpp  iter.hpp  meta.hpp  ranges.hpp  toy.hpp  util.hpp
include/siga/algo/: find.hpp  find_if.hpp
include/siga/compat/: bind_back.hpp  compat.hpp  no_unique_address.hpp
include/siga/experimental/: algo.hpp  util.hpp
include/siga/fn/: bind.hpp  fn.hpp  op.hpp  wrap.hpp
include/siga/iter/: base.hpp  get_lowest_base.hpp  ostream_joiner.hpp  reverse.hpp
include/siga/meta/: apply_traits.hpp  concepts.hpp  decay_copy.hpp  meta.hpp  tag.hpp  (+1 more)
lib/: CMakeLists.txt
lib/grace/: CMakeLists.txt  module.cppm
lib/grace/algorithm/: CMakeLists.txt  clamp_to.cppm  module.cppm
lib/grace/bit/: CMakeLists.txt  flag_set.cppm  make_bitset.cppm  module.cppm
lib/grace/compat/: CMakeLists.txt  bind_back.cppm  module.cppm
lib/grace/concepts/: CMakeLists.txt  conceptify.cppm  module.cppm  without_cvref.cppm
lib/grace/exception/: CMakeLists.txt  module.cppm  storage.cppm
lib/grace/fn/: CMakeLists.txt  first.cppm  module.cppm
lib/grace/fn/bind/: CMakeLists.txt  bind_expression.cppm  compose.cppm  lazy_eval.cppm  lift_function.cppm  lift_invocable.cppm  module.cppm  operators.cppm  overload.cppm  return_value.cppm  sequence.cppm  stored_func_invoker.cppm
lib/grace/fn/invoke/: CMakeLists.txt  fold.cppm  ignore_args.cppm  module.cppm  reverse_arguments.cppm  sequence.cppm  unwrap_reference.cppm
lib/grace/fn/op/: CMakeLists.txt  cast.cppm  construct.cppm  copy.cppm  cut_rvalue_ref.cppm  decay_copy.cppm  fold.cppm  free.cppm  get.cppm  get_reference.cppm  indirect.cppm  module.cppm  objectify.cppm  ref.cppm  sequence.cppm  subscript.cppm  throw_exception.cppm
lib/grace/fn/wrap/: CMakeLists.txt  module.cppm  uo.cppm
lib/grace/fn/wrap/args/: CMakeLists.txt  apply.cppm  ignore.cppm  module.cppm  unwrap_reference.cppm
lib/grace/fn/wrap/ret/: CMakeLists.txt  cut_rvalue_ref.cppm  decay_copy.cppm  module.cppm  objectify.cppm
lib/grace/iterator/: CMakeLists.txt  get_lowest_base.cppm  module.cppm  ostream_joiner.cppm  rerase.cppm
lib/grace/memory/: CMakeLists.txt  get_deleter.cppm  make_static_shared_ptr.cppm  module.cppm  prepend_deleter.cppm  shared_from_this_base.cppm  to_address.cppm  to_address_arr.cppm  to_unique_ptr.cppm
lib/grace/meta/: CMakeLists.txt  dummy.cppm  module.cppm  overload_priority.cppm  string_literal.cppm  tag.cppm  type_list.cppm
lib/grace/ranges/: CMakeLists.txt  consign_view.cppm  get_lowest_base.cppm  make_subrange.cppm  module.cppm  pointer_view.cppm
lib/grace/toy/: CMakeLists.txt  cvref_string_from_args.cppm  module.cppm  print.cppm  printing_constructor.cppm
lib/grace/tuple/: CMakeLists.txt  for_each_in_tuple.cppm  index_sequence_for_tuple.cppm  module.cppm  tuple_like.cppm
lib/grace/type_traits/: CMakeLists.txt  copy_cvref.cppm  module.cppm
lib/grace/utility/: CMakeLists.txt  cctype.cppm  copy.cppm  cut_rvalue_ref.cppm  decay_copy.cppm  default_assign.cppm  get_reference.cppm  ignore.cppm  implicit_cast.cppm  module.cppm  move_only.cppm  objectify.cppm  private_base_cast.cppm  read_only_value.cppm  scoped.cppm  storage_base.cppm
src/siga/: util.hpp
test/: CMakeLists.txt  bitset.cpp  consign_view.cpp  expected_monadic.cpp  forward_ref.cpp  include_all.cpp  read_only_value.cpp  return_value.cpp  stored_func_invoker.cpp  to_address.cpp  tuple.cpp  tuple_fold_invoke.cpp
test/bit/: CMakeLists.txt  make_bitset.cpp
test/fn/: CMakeLists.txt  fold_invoke.cpp  stored_func_invoker.cpp
test/memory/: CMakeLists.txt  prepend_deleter.cpp  to_address.cpp
test/tuple/: CMakeLists.txt  tuple_like.cpp
test/utility/: CMakeLists.txt  read_only_value.cpp
(+135 files in other folders)
